--- a/styles/header.css
+++ b/styles/header.css
@@ -57,3 +57,15 @@
 .container__botao {
     display: none;
 }
+
+@media screen and (min-width: 1024px) {
+    .cabeçalho__titulo{
+        font-family: var(--fonte-secundaria);
+        font-size: 30px;
+        font-weight: 400;
+       }
+       .cabeçalho__titulo-negrito{
+        font-weight: 700;
+       }
+    
+}
