--- a/styles/header.css
+++ b/styles/header.css
@@ -58,6 +58,9 @@
     display: none;
 }
 
+.cabeçalho__titulo{
+    display: none;
+}
 @media screen and (min-width: 1024px) {
     .cabeçalho__titulo{
         font-family: var(--fonte-secundaria);
