--- a/styles/header.css
+++ b/styles/header.css
@@ -66,6 +66,7 @@
         font-family: var(--fonte-secundaria);
         font-size: 30px;
         font-weight: 400;
+        display: block;
        }
        .cabeçalho__titulo-negrito{
         font-weight: 700;
