--- a/styles/header.css
+++ b/styles/header.css
@@ -71,5 +71,7 @@
        .cabeçalho__titulo-negrito{
         font-weight: 700;
        }
-    
-}
+    }
+    .opcoes{
+        display: flex;
+    }
