--- a/styles/header.css
+++ b/styles/header.css
@@ -75,3 +75,11 @@
     .opcoes{
         display: flex;
     }
+    .opcoes__item{
+        padding: 2em;
+        text-transform: uppercase;
+    }
+    .opcoes__link{
+        text-decoration: none;
+        color: var(--preto);
+    }
