--- a/styles/header.css
+++ b/styles/header.css
@@ -88,3 +88,7 @@
         text-decoration: none;
         color: var(--preto);
     }
+
+    .container__imagem-transparente{
+        display: none;
+    }
