--- a/styles/header.css
+++ b/styles/header.css
@@ -92,3 +92,15 @@
     .container__imagem-transparente{
         display: none;
     }
+    .cabeçalho__menu-hamburguer{
+        display: none;
+    }
+    .
+
+    .opcoes__botao:checked~.lista-menu{
+        display: block;
+        width: auto;
+    }
+    .opcoes__botao{
+        display: none;
+    }
