--- a/styles/header.css
+++ b/styles/header.css
@@ -54,10 +54,6 @@
     text-transform: uppercase;
 }
 
-.container__botao {
-    display: none;
-}
-
 .cabeçalho__titulo{
     display: none;
 }
@@ -76,7 +72,7 @@
        .cabeçalho__titulo-negrito{
         font-weight: 700;
        }
-    }
+   
     .opcoes{
         display: flex;
     }
@@ -95,8 +91,10 @@
     .cabeçalho__menu-hamburguer{
         display: none;
     }
+    .container__imagem{
+        padding: 1em;
+    }
     
-
     .opcoes__botao:checked~.lista-menu{
         display: block;
         width: auto;
@@ -104,3 +102,4 @@
     .opcoes__botao{
         display: none;
     }
+}
