--- a/styles/rodape.css
+++ b/styles/rodape.css
@@ -7,3 +7,12 @@ hr {
     padding: 1em;
     
 }
+
+
+@media screen and {min-width: 1024px){
+    .rodape{
+        display: flex;
+    }
+
+}
+    
