--- a/styles/rodape.css
+++ b/styles/rodape.css
@@ -9,7 +9,7 @@ hr {
 }
 
 
-@media screen and {min-width: 1024px){
+@media screen and (min-width: 1024px){
     .rodape{
         display: flex;
     }
