--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,9 @@
     --fonte-secundaria: "Josefin Sans";
     --azul: #002F52;
     --preto: #000000;
+    --cinza: #474646;
+    --cinza-claro: #858585;
+    
 }
 
 body {
