--- a/styles/rodape.css
+++ b/styles/rodape.css
@@ -8,11 +8,34 @@ hr {
     
 }
 
+.lista-rodape{
+    display: none;
+}
+
 
 @media screen and (min-width: 1024px){
-    .rodape{
-        display: flex;
+.rodape{
+    display: flex;
+    justify-content: space-around;
     }
-
+.lista-rodape{
+        display: block;
+    }
+.lista-rodape__item{
+    display: flex;
+    align-items: center;
+    margin: 0.6em 0;
+}
+lista-roda__link{
+    color: var(--cinza);
+    text-decoration: none;
+    margin-left: 0.6em;
+}
+.lista-rodape__titulo{
+    color: var(--cinza-claro);
+}
+.rodape__titulo{
+    font-size: 24px;
+}
 }
     
