--- a/styles/rodape.css
+++ b/styles/rodape.css
@@ -26,7 +26,7 @@ hr {
     align-items: center;
     margin: 0.6em 0;
 }
-lista-roda__link{
+lista-rodape__link{
     color: var(--cinza);
     text-decoration: none;
     margin-left: 0.6em;
