--- a/styles/carrossel.css
+++ b/styles/carrossel.css
@@ -92,4 +92,14 @@
         display: block;
         top: 60%;
       }
+      .card{
+        width: 40%;
+        margin: 2em auto;
+      }
+}
+
+@media screen and (min-width: 1728px) {
+    .carrossel__container{
+        display: flex;
+    }
 }
