--- a/styles/header.css
+++ b/styles/header.css
@@ -7,6 +7,10 @@
     background-position: center;
 }
 
+.container__botao:checked ~ .container__rotulo > .cabeçalho__menu-hamburguer{
+    background-image: url("//img/Menu\ Aberto.svg");
+}
+
 .cabeçalho {
     background-color: var(--branco);
     display: flex;
