--- a/styles/header.css
+++ b/styles/header.css
@@ -116,6 +116,21 @@
     .opcoes__botao{
         display: none;
     }
+
+    .opcoes__botao:checked ~.opcoes__rotulo>.opcoes__item{
+        background: var(--azul-degrade);
+        color: var(--branco);
+    }
+    .opcoes__item {
+        padding: 2em 1em;
+    }
+    .lista-menu__item:hover{
+        background: #19a7b9;
+    }
+    .lista-menu__item:hover>.lista-menu__link{
+        -webkit-text-fill-color: var(--branco);
+        text-decoration: none;
+    }
 }
 
 @media screen and (min-width: 1728px){
